# konane

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.md  game-4x4-1.txt  konane_game.json  konane_game.txt  rules.md
.github/workflows/: rust.yml
src/: audio.rs  import.rs  lib.rs  main.rs
src/game/: ai.rs  mod.rs  player.rs  rules.rs  state.rs  zhash.rs
src/ui/: app.rs  board_view.rs  game_over_view.rs  mod.rs  setup_view.rs
tests/: import_tests.rs
