[workspace]
members = [".", "game-player"]
resolver = "2"

[package]
name = "konane"
version = "1.0.0"
edition = "2024"

[features]
default = []
audio = ["kira"]

[dependencies]
iced = { version = "0.14", features = ["image", "canvas", "tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
ndarray = "0.17"
kira = { version = "0.11", optional = true }
game-player = { path = "game-player" }
tokio = { version = "1", features = ["rt-multi-thread"] }
